force-app/main/default/objects/WM4SF3__WalkMeLicense__c/WM4SF3__WalkMeLicense__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WalkMe License</label>
</CustomObject>