force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__CusEnv__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__CusEnv__c</fullName>
    <label>CusEnv</label>
    <length>250</length>
    <type>Text</type>
</CustomField>