force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__Ext__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__Ext__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be true if the customer has an extension of WalkMe along with the installed package</description>
    <label>Ext</label>
    <type>Checkbox</type>
</CustomField>