force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__isMobileUiClassic__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__isMobileUiClassic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the mobile version of WM4SF1 will open Salesforce Classic UI and not Lightning Experience</description>
    <inlineHelpText>If checked the mobile version of WM4SF1 will open Salesforce Classic UI and not Lightning Experience</inlineHelpText>
    <label>isMobileUiClassic</label>
    <type>Checkbox</type>
</CustomField>