force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__LicenseID__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__LicenseID__c</fullName>
    <label>LicenseID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>