force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__mode__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__mode__c</fullName>
    <description>the mode of work:prod, qa, local</description>
    <label>mode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>