force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__Param__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__Param__c</fullName>
    <label>Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>