force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__PrePackaged__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__PrePackaged__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PrePackaged</label>
    <type>Checkbox</type>
</CustomField>