force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__Test_Account__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__Test_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Let the user use the test walkme account</description>
    <label>Test_Account</label>
    <type>Checkbox</type>
</CustomField>