force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__User_Email__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>