force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__User_Identifier_Field__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__User_Identifier_Field__c</fullName>
    <label>User Identifier Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>