force-app/main/default/objects/WM4SF3__WalkMeLicense__c/fields/WM4SF3__WalkMe_Mobile_Env__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__WalkMe_Mobile_Env__c</fullName>
    <defaultValue>&quot;production&quot;</defaultValue>
    <label>WalkMe Mobile Env</label>
    <length>255</length>
    <type>Text</type>
</CustomField>